--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  font-size: 1rem;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+/* code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+img {
+  width: 100%;
+}
+
+.App {
+  position: relative;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 10px 10px 60px;
+  background-color: black;
+  color: white;
+  height: 80px;
+  font-size: 3rem;
+}
+
+main {
+  display: flex;
+}
+
+#editor {
+  margin-top: 80px;
+  padding: 15px;
+  display: block;
+  width: 50%;
+  height: 100vh;
+}
+
+#preview {
+  margin-top: 80px;
+  padding: 15px;
+  width: 50%;
+  height: 100vh;
+  border: 1px solid black;
+  overflow: auto;
+}
+
+#preview * {
+  margin: 5px;
 }
